--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 <script src="js/debounce.js"></script>
 <script src="js/render.js"></script>
 <script src="js/dialog.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/similar.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
